# Lymphona-GMM

./: .gitignore  README.md  pyproject.toml
GNN/: graph_construction_pipeline.py
models/: __init__.py  edge_gat.py  gat.py  gat_hier.py  sagpool.py  training.py
scripts/: add_edge_features.py  build_graphs.py  cross_validate.py  cross_validate_improved.py  download_data.py  segment_nuclei.py  train_gnn.py
util/: __init__.py  demo.py  graph_construction.py  nuclei.py  visualization.py
