[project]
name = "lymphona-gmm"
version = "0.1.0"
description = "A library for training and evaluating Models for lymphoma classification using PyTorch and Hugging Face Transformers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "datasets>=2.18.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.0",
    "tqdm>=4.66.0",
    "einops>=0.7.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.21.0",
    "lm-eval>=0.4.0",
    "opencv-python>=4.13.0.92",
    "scikit-image>=0.25.2",
    "torch-geometric>=2.8.0",
    "kagglehub>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.3.0",
]
stardist = [
    "csbdeep>=0.8",
    "numba>=0.59",
    "stardist>=0.9.1",
    "tensorflow>=2.16",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
